added author twitter profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
       </div> <!-- end .row -->
      
       <footer>
-        <p>&copy; <a href="/">{{ SITE_TITLE }}</a> 2012</p>
+        <p>Built by <a href="http://www.twitter.com/ronbeltran" target="_blank">@ronbeltran</a> - &copy; <a href="/">{{ SITE_TITLE }}</a> 2012</p>
       </footer>
 
     </div> <!-- /container -->
